--- a/src/main/resources/org/culturetripp/tonactiviter/Dashboard.fxml
+++ b/src/main/resources/org/culturetripp/tonactiviter/Dashboard.fxml
@@ -25,7 +25,7 @@
                         <graphic>
                            <ImageView fitHeight="20.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
                               <image>
-                                 <Image url="@../../../../resources/image/fermer.png" />
+                                 <Image url="@image/fermer.png" />
                               </image>
                            </ImageView>
                         </graphic>
@@ -34,7 +34,7 @@
                         <graphic>
                            <ImageView fitHeight="21.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                               <image>
-                                 <Image url="@../../../../resources/image/réduire.png" />
+                                 <Image url="@image/réduire.png" />
                               </image>
                            </ImageView>
                         </graphic>
@@ -50,7 +50,7 @@
             <children>
                <ImageView fitHeight="172.0" fitWidth="130.0" layoutX="27.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
                   <image>
-                     <Image url="@../../../../resources/image/logo.png" />
+                     <Image url="@image/logo.png" />
                   </image>
                </ImageView>
                <Button fx:id="dashboard_btn" layoutX="27.0" layoutY="194.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="26.0" prefWidth="98.0" styleClass="nav_btn" stylesheets="@Dashboard.css" text="Home" />
@@ -76,7 +76,7 @@
                                     <children>
                                        <ImageView fitHeight="56.0" fitWidth="44.0" layoutX="14.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
                                           <image>
-                                             <Image url="@../../../../resources/image/ticket.png" />
+                                             <Image url="@image/ticket.png" />
                                           </image>
                                        </ImageView>
                                     </children>
@@ -91,7 +91,7 @@
                                     <children>
                                        <ImageView fitHeight="56.0" fitWidth="44.0" layoutX="11.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
                                           <image>
-                                             <Image url="@../../../../resources/image/recu.png" />
+                                             <Image url="@image/recu.png" />
                                           </image>
                                        </ImageView>
                                     </children>
@@ -106,7 +106,7 @@
                                     <children>
                                        <ImageView fitHeight="56.0" fitWidth="44.0" layoutX="12.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
                                           <image>
-                                             <Image url="@../../../../resources/image/dispo.jpeg" />
+                                             <Image url="@image/dispo.jpeg" />
                                           </image>
                                        </ImageView>
                                     </children>
@@ -167,7 +167,7 @@
                            <TextField fx:id="addact_cherc" layoutX="97.0" layoutY="34.0" onAction="#rechercherAjoutActiviter" promptText="chercher" styleClass="chercher" stylesheets="@Dashboard.css" />
                            <ImageView fitHeight="15.0" fitWidth="16.0" layoutX="64.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
                               <image>
-                                 <Image url="@../../../../resources/image/rechercher.png" />
+                                 <Image url="@image/rechercher.png" />
                               </image>
                            </ImageView>
                         </children>
