--- a/src/main/resources/org/culturetripp/tonactiviter/Dashboard.fxml
+++ b/src/main/resources/org/culturetripp/tonactiviter/Dashboard.fxml
@@ -25,7 +25,7 @@
                         <graphic>
                            <ImageView fitHeight="20.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
                               <image>
-                                 <Image url="@image/fermer.png" />
+                                 <Image url="@../../../../resources/image/fermer.png" />
                               </image>
                            </ImageView>
                         </graphic>
@@ -34,7 +34,7 @@
                         <graphic>
                            <ImageView fitHeight="21.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                               <image>
-                                 <Image url="@image/réduire.png" />
+                                 <Image url="@../../../../resources/image/réduire.png" />
                               </image>
                            </ImageView>
                         </graphic>
@@ -50,7 +50,7 @@
             <children>
                <ImageView fitHeight="172.0" fitWidth="130.0" layoutX="27.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
                   <image>
-                     <Image url="@image/logo.png" />
+                     <Image url="@../../../../resources/image/logo.png" />
                   </image>
                </ImageView>
                <Button fx:id="dashboard_btn" layoutX="27.0" layoutY="194.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="26.0" prefWidth="98.0" styleClass="nav_btn" stylesheets="@Dashboard.css" text="Home" />
@@ -66,7 +66,7 @@
       <center>
          <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <children>
-               <AnchorPane fx:id="dashboard_form" prefHeight="603.2" prefWidth="680.8" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <AnchorPane fx:id="dashboard_form" prefHeight="603.2" prefWidth="680.8" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                   <children>
                      <AnchorPane layoutX="14.0" layoutY="14.0" prefHeight="194.0" prefWidth="655.0" styleClass="bg_white" stylesheets="@Dashboard.css">
                         <children>
@@ -76,7 +76,7 @@
                                     <children>
                                        <ImageView fitHeight="56.0" fitWidth="44.0" layoutX="14.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
                                           <image>
-                                             <Image url="@image/ticket.png" />
+                                             <Image url="@../../../../resources/image/ticket.png" />
                                           </image>
                                        </ImageView>
                                     </children>
@@ -91,7 +91,7 @@
                                     <children>
                                        <ImageView fitHeight="56.0" fitWidth="44.0" layoutX="11.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
                                           <image>
-                                             <Image url="@image/recu.png" />
+                                             <Image url="@../../../../resources/image/recu.png" />
                                           </image>
                                        </ImageView>
                                     </children>
@@ -106,7 +106,7 @@
                                     <children>
                                        <ImageView fitHeight="56.0" fitWidth="44.0" layoutX="12.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
                                           <image>
-                                             <Image url="@image/dispo.jpeg" />
+                                             <Image url="@../../../../resources/image/dispo.jpeg" />
                                           </image>
                                        </ImageView>
                                     </children>
@@ -167,14 +167,14 @@
                            <TextField fx:id="addact_cherc" layoutX="97.0" layoutY="34.0" onAction="#rechercherAjoutActiviter" promptText="chercher" styleClass="chercher" stylesheets="@Dashboard.css" />
                            <ImageView fitHeight="15.0" fitWidth="16.0" layoutX="64.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
                               <image>
-                                 <Image url="@image/rechercher.png" />
+                                 <Image url="@../../../../resources/image/rechercher.png" />
                               </image>
                            </ImageView>
                         </children>
                      </AnchorPane>
                   </children>
                </AnchorPane>
-               <AnchorPane fx:id="dispo_form" layoutX="125.0" layoutY="76.0" prefHeight="603.2" prefWidth="680.8" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <AnchorPane fx:id="dispo_form" layoutX="125.0" layoutY="76.0" prefHeight="603.2" prefWidth="680.8" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                   <children>
                      <AnchorPane layoutX="5.0" layoutY="14.0" prefHeight="192.0" prefWidth="667.0" styleClass="bg_white" stylesheets="@Dashboard.css">
                         <children>
